spec/test_templates/json/security_group/valid_security_group_with_egress.json
{
  "Parameters": {
    "VpcId": {
      "Type": "AWS::EC2::VPC::Id"
    }
  },

  "Resources": {
    "sg1": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "some_group_desc",
        "VpcId": {
          "Ref": "VpcId"
        },
        "Tags": [
          {
            "Key" : "Vintage",
            "Value" : "1995"
          }
        ]
      }
    },

    "sg2": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "some_group_desc",
        "SecurityGroupIngress": [
          {
            "CidrIp": "10.1.2.3/32",
            "FromPort": 34,
            "ToPort": 36,
            "IpProtocol": "tcp"
          }
        ],
        "SecurityGroupEgress": [
          {
            "CidrIp": "1.2.3.4/32",
            "FromPort": 55,
            "ToPort": 56,
            "IpProtocol": "tcp"
          }
        ],
        "VpcId": {
          "Ref": "VpcId"
        }
      }
    },

    "sg3": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "some_group_desc",
        "SecurityGroupEgress": {
          "CidrIp": "1.2.3.5/32",
          "FromPort": 57,
          "ToPort": 58,
          "IpProtocol": "tcp"
        },
        "VpcId": {
          "Ref": "VpcId"
        }
      }
    },

    "securityGroupEgress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sg1"
        },
        "CidrIp": "5.5.5.5/32",
        "FromPort": 39,
        "ToPort": 42,
        "IpProtocol": "tcp"
      }
    }
  }
}
